# muon

./: .cirrus-ci.yml  .cirrus.yml  .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  .muon  CONTRIBUTING.md  Makefile  README.md  README_windows.md  REUSE.toml  bootstrap.bat  bootstrap.sh  config.sh  configure  main.c  meson.build  meson_options.txt
doc/: contributing.md  differences.md  features.md  grammar  meson.build  meson.build.5.scd  muon.1.scd  muon_fmt.ini  release_notes.md  script_modules.md
doc/book/: book.toml  meson.build
doc/book/src/: SUMMARY.md  contributing.md  differences.md  features.md  internals.md  intro.md  release_notes.md  scripting.md
doc/book/theme/: book.js
doc/misc/: configuration_data_escaping_rules.md  dep_flowchart.md
doc/website/: ci.html  index.html  main.css  man-style.css  meson.build  muon_ci.html  signatures_to_html.py  status.css  style.css  version_info.py.in
doc/website/ci/: index.html  meson.build
src/: amalgam.c  archive.c  arena.c  args.c  ast.c  bucket_array.c  builtin.c  cmd_install.c  cmd_subprojects.c  cmd_test.c  coerce.c  command.c  compilers.c  darr.c  embedded.c  error.c  eval.c  expr.c  fetch.c  filesystem.c  function.c  getopt_long.c  guess.c  hash.c  hash_table.c  hdarr.c  inih.c  install.c  interpreter.c  json.c  lexer.c  log.c  machine.c  machine_file.c  machines.c  main.c  mem.c  memmem.c  meson.build  meson_opts.c  (+22 more)
src/backend/: backend.c  common_args.c  introspect.c  ninja.c  output.c  vs.c  xcode.c
src/backend/ninja/: alias_target.c  build_target.c  clang_format.c  coverage.c  custom_target.c  rules.c
src/backend/vs/: common.h  filter.c  project.c  solution.c  vs_common.c  vs_common.h  xml.c
src/data/: bucket_array.c  darr.c  hash.c
src/datastructures/: arr.c  bucket_arr.c  hash.c  seg_list.c  stack.c
src/formats/: ansi.c  editorconfig.c  ini.c  ini_cfg.c  json.c  lines.c  tap.c  tar.c  xml.c
src/functions/: array.c  bool.c  boolean.c  both_libs.c  build_target.c  common.c  compiler.c  configuration_data.c  custom_target.c  default.c  dependency.c  dict.c  disabler.c  environment.c  external_library.c  external_program.c  feature_opt.c  file.c  generator.c  include_directory.c  kernel.c  machine.c  meson.c  modules.c  number.c  run_result.c  source_configuration.c  source_set.c  string.c  subproject.c  template.c
src/functions/default/: build_target.c  configure_file.c  custom_target.c  dependency.c  install.c  options.c  setup.c  subproject.c
src/functions/kernel/: build_target.c  configure_file.c  custom_target.c  dependency.c  install.c  options.c  subproject.c
src/functions/modules/: curl.c  fs.c  getopt.c  json.c  keyval.c  pkgconfig.c  python.c  python3.c  sourceset.c  subprojects.c  time.c  toolchain.c  util.c  windows.c
src/lang/: analyze.c  compiler.c  dap.c  docs.c  eval.c  fmt.c  func_lookup.c  interpreter.c  lexer.c  lsp.c  object.c  object_iterators.c  parser.c  serial.c  server.c  string.c  typecheck.c  vm.c  workspace.c
src/output/: output.c
src/platform/: assert.c  dirs.c  filesystem.c  mem.c  meson.build  os.c  path.c  rpath_fixer.c  run_cmd.c  term.c  uname.c
src/platform/null/: backtrace.c  filesystem.c  rpath_fixer.c  socket.c  timer.c
src/platform/posix/: backtrace.c  filesystem.c  init.c  log.c  os.c  path.c  rpath_fixer.c  run_cmd.c  socket.c  term.c  timer.c  uname.c
src/platform/windows/: filesystem.c  getopt.c  init.c  log.c  os.c  path.c  rpath_fixer.c  run_cmd.c  socket.c  term.c  timer.c  uname.c  win32_error.c  win32_getopt.c
src/script/: builtin_options.meson  coverage.meson  delete_suffix.meson  dependencies.meson  gettext.meson  global_options.meson  itstool.meson  meson.build  msgfmthelper.meson  per_project_options.meson  python_info.py  vcs_tagger.meson
src/script/commands/: clang_format.meson  copyfile.meson  coverage.meson  init.meson  vcs_tagger.meson
src/script/html/: docs.html  test_out.html
src/script/lib/: cmake_prelude.meson
src/script/modules/: _test.meson  gnome.meson  i18n.meson  wayland.meson  windows.meson
src/script/options/: global.meson  per_project.meson
src/script/runtime/: compilers.meson  dependencies.meson  toolchains.meson
src/ui/: inspector.cpp  meson.build  ui.cpp
subprojects/packagefiles/glfw3/: meson.build  meson_options.txt
tests/: array.meson  badnum.meson  dict.meson  disabler.meson  environment.meson  fstring.meson  join_paths.meson  katie.meson  meson.build  multiline.meson  test.meson  test_invariant_bestline.c  unicode.meson  version_compare.meson
tests/configure_file/: meson.build
tests/configure_file/cmake/: config.h.in  meson.build
tests/fmt/: crazy_comments.meson  fmt_expect.meson  meson.build  test.sh  test_all_meson_files.meson
tests/fmt/cases/: continuation_indent.ini  continuation_indent.meson  end_of_line_auto.ini  end_of_line_lf.ini  end_of_line_mixed_crlf_first.meson  end_of_line_mixed_lf_first.meson  files_sorted.meson  files_unsorted.meson  final_newline_missing.meson  final_newline_present.meson  fmt_off.meson  group_arg_value.ini  group_arg_value.meson  indent_before_comments.ini  indent_before_comments.meson  insert_final_newline_false.ini  kwargs_force_multiline.ini  kwargs_force_multiline.meson  no_single_comma_function.ini  no_single_comma_function.meson  simplify_string_literals.ini  simplify_string_literals_in.meson  (+8 more)
tests/fuzz/: load_dump.meson  meson.build  meson.dict
tests/lang/: array.meson  badnum.meson  configuration_data.meson  dict.meson  disabler.meson  environment.meson  fstring.meson  func.meson  join.meson  join_paths.meson  json.meson  julia.meson  katie.meson  line_continuation.meson  longstring.meson  meson.build  multiline.meson  object_stack_page_size.meson  range.meson  return_during_iteration.meson  run_command.meson  scope.meson  scope_err_hoist.meson  shlex.meson  string_format_escape.meson  strings.meson  ternary.meson  toolchain.meson  unicode.meson  version_compare.meson
tests/lsp/: meson.build  runner.meson
tests/project/: .gitignore  meson.build  runner.meson  runner.sh
tests/unit/: meson.build  path.c
(+837 files in other folders)
