# SPDX-FileCopyrightText: Stone Tickle <lattis@mochiro.moe>
# SPDX-License-Identifier: GPL-3.0-only

option(
    'libcurl',
    type: 'feature',
    value: 'auto',
    description: 'required for fetching wraps',
)
option(
    'libarchive',
    type: 'feature',
    value: 'auto',
    description: 'required for extracting wrap archives',
)
option(
    'libpkgconf',
    type: 'feature',
    value: 'auto',
    description: 'required for dependency discovery with pkg-config files',
)
option(
    'samurai',
    type: 'feature',
    value: 'enabled',
    description: 'embed samurai into the muon executable',
)
option(
    'readline',
    type: 'combo',
    choices: ['builtin', 'bestline'],
    value: 'builtin',
    description: 'select readline implementation',
)
option(
    'static',
    type: 'boolean',
    value: false,
    description: 'build a static muon executable',
)
option(
    'docs',
    type: 'feature',
    value: 'auto',
    description: 'build documentation',
)
option(
    'website',
    type: 'boolean',
    value: false,
    description: 'build website, requires docs to be enabled',
)
option(
    'tracy',
    type: 'feature',
    value: 'auto',
    description: 'whether to enable tracy',
)
option(
    'meson_tests_repo',
    type: 'string',
    value: 'https://git.sr.ht/~lattis/meson-tests',
)
option(
    'ui',
    type: 'feature',
    value: 'disabled',
)
